@@ -1,6 +1,7 @@
 package com.axway.yamles.utils.plugins;
 
 import java.util.List;
+import java.util.Optional;
 
 /**
  * Provides a Pebble function to lookup values from data sources.
@@ -14,6 +15,8 @@ public interface LookupProvider extends Provider {
 	public LookupFunction buildFunction(LookupSource source) throws LookupProviderException;
 
 	public List<FunctionArgument> getFunctionArguments();
+	
+	public Optional<FunctionArgument> getFunctionArgumentByName(String name);
 
 	public List<ConfigParameter> getConfigParameters();
 }
